--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
  <h1>{{ title }} de aplicativo rodando apos upado do docker hub!</h1>
+ <h3>Configurar os arquivos Dockerfile, docker-compose.yml, e nginx.conf</h3>
 
    
